This represents initial work into building an initial:
* editor
* (CSW) catalogue with OAuth authentication
* (Data) catalogue
* static site
* static site metrics

This code is very sketchy and needs major refactoring work. However when ran locally it should work enough to publish the current set of ADD metadata records (with possible minor edits, which is patly why refactoring hasn't been looked at yet).

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 __pycache__
 /htmlcov
 /.coverage
-/output/candidate-record-iso-html.xml
-/output/candidate-record-iso-rubric.xml
-/output/candidate-record.xml
+/scar_add_metadata_toolbox/build
+/provisioning/terraform/.terraform
