--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,16 +5,32 @@
     app:
       build: .
       image: docker-registry.data.bas.ac.uk/magic/add-metadata-toolbox:latest
-      command: python scar_add_metadata_toolbox/
+      command: flask run --host 0.0.0.0 --port 9000
       volumes:
         - .:/usr/src/app
+      environment:
+        - AWS_ACCESS_KEY_ID
+        - AWS_SECRET_ACCESS_KEY
+      ports:
+        - 9000:9000
+      depends_on:
+        - csw-unpub-db
+        - csw-pub-db
+
+    csw-unpub-db:
+      image: postgis/postgis:12-3.0-alpine
+      environment:
+        POSTGRES_PASSWORD: password
+
+    csw-pub-db:
+      image: postgis/postgis:12-3.0-alpine
+      environment:
+        POSTGRES_PASSWORD: password
 
     web:
       image: nginx:alpine
       volumes:
         - ./support/nginx/default.conf:/etc/nginx/conf.d/default.conf
-        - ./support/nginx/index.html:/usr/share/nginx/html/index.html
-        - ./output:/usr/share/nginx/html/output
-        - ./support/xml-stylesheets:/usr/share/nginx/html/stylesheets
+        - ./scar_add_metadata_toolbox/build:/usr/share/nginx/html/public
       ports:
-        - "9000:9000"
+        - "9001:9001"
