--- a/support/nginx/default.conf
+++ b/support/nginx/default.conf
@@ -2,13 +2,13 @@ log_format brief '[$time_local] $status - $request';
 access_log off;
 
 server {
-    listen       9000;
+    listen       9001;
     server_name  localhost;
 
     access_log /dev/stdout brief;
 
     location / {
-        root       /usr/share/nginx/html;
+        root       /usr/share/nginx/html/public;
         index      index.html;
         autoindex on;
     }
