--- a/.flaskenv.example
+++ b/.flaskenv.example
@@ -12,16 +12,16 @@
 # APP_AUTH_SESSION_FILE_PATH=~/.config/scar_add_metadata_toolbox/auth.json
 
 ## Sentry - Get DSN from https://sentry.io - this value is not a secret
-SENTRY_DSN=https://db9543e7b68f4b2596b189ff444438e3@o39753.ingest.sentry.io/5197036
+SENTRY_DSN=https://xxx.ingest.sentry.io/xxx
 
 ## Azure authentication (Client/Editor) - Get from https://portal.azure.com/
-AUTH_CLIENT_TENANCY=https://login.microsoftonline.com/d14c529b-5558-4a80-93b6-7655681e55d6
-AUTH_CLIENT_ID=e9f1f826-156f-448f-aa9c-ca44ec35aafb
-AUTH_CLIENT_SCOPES="api://d364a396-36a8-4137-a6ef-12996fa39183/Records.Read.All"
+AUTH_CLIENT_TENANCY=https://login.microsoftonline.com/xxx
+AUTH_CLIENT_ID=xxx
+AUTH_CLIENT_SCOPES="api://xxx/Records.Read.All"
 
 ## Azure authentication (Server/Catalogue) - Get from https://portal.azure.com
-AUTH_SERVER_TENANCY=d14c529b-5558-4a80-93b6-7655681e55d6
-AUTH_SERVER_ID=d364a396-36a8-4137-a6ef-12996fa39183
+AUTH_SERVER_TENANCY=xxx
+AUTH_SERVER_ID=xxx
 
 ## CSW repository (client)
 # APP_CSW_LOG_FILE_PATH=/var/log/app/csw.log
@@ -34,4 +34,4 @@ AUTH_SERVER_ID=d364a396-36a8-4137-a6ef-12996fa39183
 
 # Static website export
 STATIC_BUILD_DIR="./scar_add_metadata_toolbox/build"
-S3_BUCKET="add-catalogue-integration.data.bas.ac.uk"
+S3_BUCKET="www.example.com"
