--- a/provisioning/terraform/docker-compose.yml
+++ b/provisioning/terraform/docker-compose.yml
@@ -3,11 +3,9 @@ version: "2"
 
 services:
   terraform:
-    image: hashicorp/terraform:0.11.8
-    working_dir: /usr/src/app/provisioning/terraform
-    entrypoint: ash
+    image: zenika/terraform-azure-cli:r4.1-tf0.12.26-azcli2.7.0
     volumes:
-      - .:/usr/src/app/provisioning/terraform
+      - .:/workspace
     environment:
       - AWS_ACCESS_KEY_ID
       - AWS_SECRET_ACCESS_KEY
