--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -316,3 +316,7 @@ sentry:
   needs:
     - job: version
       artifacts: true
+  rules:
+    - if: '$CI_COMMIT_TAG != null'
+    - if: '$CI_COMMIT_BRANCH != "master"'
+
