--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,8 @@ packages = [
 awscli = "^1.18.93"
 bas-metadata-library = {url = "http://bsl-repoa.nerc-bas.ac.uk/magic/v1/projects/metadata-library/latest/dist/bas_metadata_library-0.0.0-py3-none-any.whl"}
 bas-style-kit-jinja-templates = "^0.5.0"
+click-spinner = "^0.1.10"
+Faker = "^4.1.1"
 Flask = "^1.1.1"
 flask-azure-oauth = "^0.4.1"
 Frozen-Flask = "^0.15.0"
@@ -38,6 +40,7 @@ requests = "^2.24.0"
 sentry-sdk = {version = "^0.14.3", extras = ["flask"]}
 simplejson = "^3.17.0"
 str2bool = "^1.1"
+tabulate = "^0.8.7"
 # BAS Metadata Library - to pin version of indirect dependencies
 lxml = {url = "http://bsl-repoa.nerc-bas.ac.uk/magic/v1/libraries/python/wheels/linux_x86_64/cp38m/lxml-4.5.0-cp38-cp38-linux_x86_64.whl"}
 # OWSlib dependencies - to pin version of indirect dependencies
