--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,6 +53,10 @@ SQLAlchemy = "^1.3.18"
 [tool.poetry.dev-dependencies]
 black = "^19.10b0"
 bandit = "^1.6.2"
+pytest = "^5.3.2"
+pytest-cov = "^2.8.1"
+pytest-flask = "^0.15.0"
+pytest-random-order = "^1.0.4"
 tomlkit = "^0.6.0"
 
 [tool.black]
