--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -106,6 +106,7 @@ coverage-app:
   script:
     - "pytest --cov=scar_add_metadata_toolbox --cov-fail-under=100 ."
     - "coverage html"
+  needs: []
   artifacts:
     name: "$CI_BUILD_TOKEN-coverage"
     paths:
@@ -114,7 +115,6 @@ coverage-app:
   rules:
     - changes:
         - '**/*.py'
-
 
 black:
   stage: 🧪 test
@@ -140,6 +140,7 @@ package:
     - "poetry version $VERSION"
     - "poetry build"
   needs:
+    - job: test-app
     - job: black
     - job: bandit
     - job: version
@@ -350,4 +351,3 @@ sentry:
   rules:
     - if: '$CI_COMMIT_TAG != null'
     - if: '$CI_COMMIT_BRANCH != "master"'
-
